--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -6,13 +6,18 @@
 
         <div style="display: flex; justify-content: space-between;" >
             
-            <div #myPieChart style="width: 570px; height: 322px; background: white; border-radius: 24px;"></div>
+            <div #myPieChart style="width: 46%; height: 320px; background: white; border-radius: 24px;"></div>
 
 
-            <div style="background: white; margin-bottom: 20px; border-radius: 24px ; margin-left: 20px; width: 30%; height: 322px;">
-                <h3 style="margin-top: 10px; padding-left: 10px; font-weight: 500;">List of Common Conditions :</h3>
+            <div class="chart-container" style="background-color: white; border-radius: 24px; padding: 10px;width: 55%;">
+                <canvas  id="MyChart" style=" height: 400px !important;">{{ chart }}</canvas>
             </div>
+            <!-- <div style="background: white; margin-bottom: 20px; border-radius: 24px ; margin-left: 20px; width: 30%; height: 322px;">
+                <h3 style="margin-top: 10px; padding-left: 10px; font-weight: 500;">List of Common Conditions :</h3>
+            </div> -->
         </div>
+
+        
         
         <div style="margin-top: 12px;">
             <div style="display: flex; justify-content: space-between;">
