--- a/src/app/components/patient/patient.component.html
+++ b/src/app/components/patient/patient.component.html
@@ -36,45 +36,45 @@
         <input matInput (keyup)="applyFilter($event)" placeholder="Ex. ium" #input>
     </mat-form-field> -->
         <div class="mat-elevation-z8">
-            <table mat-table [dataSource]="dataSource" matSort (matSortChange)="announceSortChange($event)">
+            <table mat-table [dataSource]="dataSource" matSort>
 
                 <!-- Position Column -->
-                <ng-container matColumnDef="position">
+                <ng-container matColumnDef="SUBJECT_ID">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by number">
                         SUBJECT_ID
                     </th>
-                    <td mat-cell *matCellDef="let element"> {{element.position}} </td>
+                    <td mat-cell *matCellDef="let element"> {{element.SUBJECT_ID}} </td>
                 </ng-container>
 
                 <!-- Name Column -->
-                <ng-container matColumnDef="name">
+                <ng-container matColumnDef="HADM_ID">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by name">
                     HADM ID
                     </th>
-                    <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+                    <td mat-cell *matCellDef="let element"> {{element.HADM_ID}} </td>
                 </ng-container>
 
                 <!-- Weight Column -->
-                <ng-container matColumnDef="weight">
+                <ng-container matColumnDef="Riskgroup">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by weight">
                         RISK GROUP
                     </th>
-                    <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
+                    <td mat-cell *matCellDef="let element"> {{element.Riskgroup}} </td>
                 </ng-container>
 
                 <!-- Symbol Column -->
-                <ng-container matColumnDef="symbol">
+                <ng-container matColumnDef="AGE">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by symbol">
                         AGE
                     </th>
-                    <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
+                    <td mat-cell *matCellDef="let element"> {{element.AGE}} </td>
                 </ng-container>
                 <!-- Gender Column -->
-                <ng-container matColumnDef="gender">
+                <ng-container matColumnDef="GENDER">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by gender">
                         GENDER
                     </th>
-                    <td mat-cell *matCellDef="let element"> {{element.gender}} </td>
+                    <td mat-cell *matCellDef="let element"> {{element.GENDER}} </td>
                 </ng-container>
                 <!-- Actions Column -->
                 <ng-container matColumnDef="actions">
@@ -86,7 +86,7 @@
                 <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
                 <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
             </table>
-            <mat-paginator [pageSizeOptions]="[5,10,20]" showFirstLastButtons>
+            <mat-paginator [pageSizeOptions]="[25,50,75,100]" showFirstLastButtons>
 
             </mat-paginator>
         </div>
