--- a/src/app/components/patient/patient.component.scss
+++ b/src/app/components/patient/patient.component.scss
@@ -1,14 +1,48 @@
+
 mat-toolbar {
     justify-content: space-between;
 }
-
+.mat-elevation-z8
+{
+        box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.3);
+}
 .content {
     padding: 16px;
+
+    mat-card {
+        margin-bottom: 16px;
+        border-radius: 24px;
+        display: flex;
+        align-items: center;
+        padding: 10%;
+        
+        
+
+        mat-card-header {
+            mat-card-title {
+                font-size: 35px;
+            }
+        }
+
+        &.emergency {
+            color: red;
+        }
+
+        &.elective {
+            color: green;
+        }
+
+        &.urgent {
+            color: gold;
+        }
+
+        p {
+            font-size: 12px;
+            padding-top: 3px;
+        }
+    }
 }
 
-.content>mat-card {
-    margin-bottom: 16px;
-}
 table {
     width: 100%;
 }
