--- a/src/app/components/patient/patient.component.html
+++ b/src/app/components/patient/patient.component.html
@@ -2,8 +2,8 @@
     <app-sidenav></app-sidenav>
 
     <div style="padding: 20px 50px;background-color: #f6f6f6; position: absolute; left:22% ; width: 70%;">
-        <mat-toolbar >
-            <span>Card view demo</span>
+        <mat-toolbar>
+            <h2>Patients</h2>
             <button mat-button (click)="toggleGridColumns()" fxHide.lt-md>
                 <span *ngIf="gridColumns === 4">Three Columns</span>
                 <!-- <span *ngIf="gridColumns === 3">Four Columns</span> -->
@@ -11,29 +11,51 @@
         </mat-toolbar>
         <div class="content">
             <div fxLayout="row wrap" fxLayoutGap="16px grid">
-                <div [fxFlex]="(100/gridColumns) + '%'" fxFlex.xs="100%" fxFlex.sm="33%" *ngFor="let num of [1,2,3]">
-                    <mat-card class="mat-elevation-z4">
+                <div [fxFlex]="(100/gridColumns) + '%'" fxFlex.xs="100%" fxFlex.sm="33%">
+                    <mat-card class="mat-elevation-z8 emergency">
                         <mat-card-header>
-                            <mat-card-title>Mountains {{num}}</mat-card-title>
+                            <mat-card-title>12</mat-card-title>
                         </mat-card-header>
                         <mat-card-content>
                             <p>
-                                25,768
+                                EMERGENCY
                             </p>
                         </mat-card-content>
-                        <mat-card-actions>
-                            <button mat-button>Show More</button>
-                        </mat-card-actions>
+                    </mat-card>
+                </div>
+                <div [fxFlex]="(100/gridColumns) + '%'" fxFlex.xs="100%">
+                    <mat-card class="mat-elevation-z8 elective">
+                        <mat-card-header>
+                            <mat-card-title>8</mat-card-title>
+                        </mat-card-header>
+                        <mat-card-content>
+                            <p>
+                                Elective
+                            </p>
+                        </mat-card-content>
+                    </mat-card>
+                </div>
+                <div [fxFlex]="(100/gridColumns) + '%'" fxFlex.xs="100%" fxFlex.sm="33%">
+                    <mat-card class="mat-elevation-z8 urgent">
+                        <mat-card-header class="urgent">
+                            <mat-card-title>10</mat-card-title>
+                        </mat-card-header>
+                        <mat-card-content>
+                            <p>
+                                Urgent
+                            </p>
+                        </mat-card-content>
                     </mat-card>
                 </div>
             </div>
         </div>
-        <h2>
-            Patient Information
-        </h2>
-    <!-- <mat-form-field>
+
+        <div style="padding: 10px ;">
+            <h2>Patient Information</h2>
+        </div>
+        <!-- <mat-form-field >
         <mat-label>Filter</mat-label>
-        <input matInput (keyup)="applyFilter($event)" placeholder="Ex. ium" #input>
+        <input matInput (keyup)="applyFilter($event)" placeholder="Search columns" #input>
     </mat-form-field> -->
         <div class="mat-elevation-z8">
             <table mat-table [dataSource]="dataSource" matSort>
@@ -49,7 +71,7 @@
                 <!-- Name Column -->
                 <ng-container matColumnDef="HADM_ID">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by name">
-                    HADM ID
+                        HADM ID
                     </th>
                     <td mat-cell *matCellDef="let element"> {{element.HADM_ID}} </td>
                 </ng-container>
@@ -78,13 +100,15 @@
                 </ng-container>
                 <!-- Actions Column -->
                 <ng-container matColumnDef="actions">
-                    <th mat-header-cell *matHeaderCellDef ></th>
+                    <th mat-header-cell *matHeaderCellDef></th>
                     <td mat-cell *matCellDef="let element">
-                        <button mat-button (click)="onButtonClick(element)">Click me</button> </td>
+                        <button mat-button (click)="onButtonClick(element)">Click me</button>
+                    </td>
                 </ng-container>
 
                 <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
                 <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
             </table>
             <mat-paginator [pageSizeOptions]="[25,50,75,100]" showFirstLastButtons>
 
