--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
 <app-sidenav></app-sidenav>
 <router-outlet></router-outlet>
 <!-- <app-dashboard></app-dashboard> -->
+
+<!-- <app-login-page></app-login-page> -->
