--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,7 +1,7 @@
-<div style="display: flex;">
-    <app-sidenav></app-sidenav>
+<!-- <div style="display: flex;"> -->
+    <!-- <app-sidenav></app-sidenav> -->
 
-    <div style="padding: 20px 50px;background-color: #f6f6f6; position: absolute; left:22% ; width: 70%;">
+    <div style="padding: 20px 50px;background-color: #f6f6f6;">
         <h2>Dashboard</h2>
 
         <div style="display: flex; justify-content: space-between;" >
@@ -65,4 +65,4 @@
         </div>
 
     </div>
-</div>
+<!-- </div> -->
