--- a/src/app/components/single-patient-details/single-patient-details.component.html
+++ b/src/app/components/single-patient-details/single-patient-details.component.html
@@ -1,98 +1,62 @@
 
-<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css" />
+<!-- <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css" />
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
-<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
-
-<!------ Include the above in your HEAD tag ---------->
-
-<!-- <div>
-    <canvasjs-chart [options]="chartOptions" [styles]="{width: '100%', height:'360px'}"></canvasjs-chart>    
-</div>    -->
+<script src="//code.jquery.com/jquery-1.11.1.min.js"></script> -->
 
 
-<div id="wrapper">
+
+<div class="container-bx">
+
+  <!-- Gauge Chart Call ------------------- -->
+      <div class="mid-section" style="width:60%;">
+        <div #gaugeChart
+        style="border-radius: 24px; width:80% ; margin-left: 20px ;height:48%; background-color: white;">
+        </div>
+      </div>
+  <!-- Gauge Chart Call ------------------- -->
+
+
+  <div class="patient-data-section" style="background-color: white; width: 40%;border-radius: 24px; margin-right: 20px;">
+    <div style="padding-left: 30px; padding-top: 23px;">
+      <h2>Patient Details</h2>
+    </div>
+    <div style="padding-left: 30px; color: white;">
+
+      <div style="width: 80%; background-color:#F96167;padding:10px 0px ; display: flex; align-items: center;flex-direction: column; margin-bottom: 10px;" >
+        <span style="font-size: 12px;">Patient Id :</span>
+        <span style="font-size: 16px;">lala lala lala laaa</span>
+      </div>
+      <div style="width: 80%; background-color:#F96167;padding:10px 0px ; display: flex; align-items: center;flex-direction: column; margin-bottom: 10px;" >
+        <span style="font-size: 12px;">HADM Id :</span>
+        <span style="font-size: 16px;">lala lala lala laaa</span>
+      </div><div style="width: 80%; background-color:#F96167;padding:10px 0px ; display: flex; align-items: center;flex-direction: column; margin-bottom: 10px;" >
+        <span style="font-size: 12px;">Age :</span>
+        <span style="font-size: 16px;">lala lala lala laaa</span>
+      </div><div style="width: 80%; background-color:#F96167;padding:10px 0px ; display: flex; align-items: center;flex-direction: column; margin-bottom: 10px;" >
+        <span style="font-size: 12px;">Gender :</span>
+        <span style="font-size: 16px;">lala lala lala laaa</span>
+      </div><div style="width: 80%; background-color:#F96167;padding:10px 0px ; display: flex; align-items: center;flex-direction: column; margin-bottom: 10px;" >
+        <span style="font-size: 12px;">Admission Date :</span>
+        <span style="font-size: 16px;">lala lala lala laaa</span>
+      </div><div style="width: 80%; background-color:#F96167;padding:10px 0px ; display: flex; align-items: center;flex-direction: column; margin-bottom: 10px;" >
+        <span style="font-size: 12px;">Insurance Provider :</span>
+        <span style="font-size: 16px;">lala lala lala laaa</span>
+      </div><div style="width: 80%; background-color:#F96167;padding:10px 0px ; display: flex; align-items: center;flex-direction: column; margin-bottom: 10px;" >
+        <span style="font-size: 12px;">Risk Group :</span>
+        <span style="font-size: 16px;">lala lala lala laaa</span>
+      </div>
+      
+      <h4></h4>
+      <h4></h4>
+      <h4></h4>
+      <h4></h4>
+      <h4></h4>
+      <h4></h4> 
+    </div>  
     
-   <!-- Page content -->
-  <div id="page-content-wrapper" style="background-color: beige;height: 100vh;">
-    <div style="display: flex; justify-content: center">
-      <h1>PATIENT RECORD</h1>
-    </div>
-    <div style="padding-left: 20%">
-      <h2>SUBJECT_ID :23</h2>
-      <h2>INSURANCE :PRIVATE</h2>
-      <h2>MARITAL STATUS:MARRIED</h2>
-    </div>
-
-    <div class="container">
-      <div class="row">
-        <h2 class="text-center">DETAILS</h2>
-      </div>
-
-  
-    </div>
-
-    <div class="modal fade" id="edit" tabindex="-1" role="dialog" aria-labelledby="edit" aria-hidden="true">
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">
-              ×
-            </button>
-            <h4 class="modal-title custom_align" id="Heading">
-              Edit Your Detail
-            </h4>
-          </div>
-          <div class="modal-body">
-            <div class="form-group">
-              <input class="form-control" type="text" placeholder="Tiger Nixon" />
-            </div>
-            <div class="form-group">
-              <input class="form-control" type="text" placeholder="System Architect" />
-            </div>
-            <div class="form-group">
-              <input class="form-control" type="text" placeholder="Edinburgh" />
-            </div>
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-warning btn-lg" style="width: 100%">
-              <span class="glyphicon glyphicon-ok-sign"></span> Update
-            </button>
-          </div>
-        </div>
-        <!-- /.modal-content -->
-      </div>
-      <!-- /.modal-dialog -->
-    </div>
-
-    <div class="modal fade" id="delete" tabindex="-1" role="dialog" aria-labelledby="edit" aria-hidden="true">
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">
-              ×
-            </button>
-            <h4 class="modal-title custom_align" id="Heading">
-              Delete this entry
-            </h4>
-          </div>
-          <div class="modal-body">
-            <div class="alert alert-danger">
-              <span class="glyphicon glyphicon-warning-sign"></span> Are you
-              sure you want to delete this Record?
-            </div>
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-success">
-              <span class="glyphicon glyphicon-ok-sign"></span> Yes
-            </button>
-            <button type="button" class="btn btn-default" data-dismiss="modal">
-              <span class="glyphicon glyphicon-remove"></span> No
-            </button>
-          </div>
-        </div>
-        <!-- /.modal-content -->
-      </div>
-      <!-- /.modal-dialog -->
-    </div>
+    
   </div>
+    
+  
+
 </div>
