--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,12 @@
-<app-sidenav></app-sidenav>
-<router-outlet></router-outlet>
+<!-- <app-sidenav></app-sidenav>
+<router-outlet></router-outlet> -->
 <!-- <app-dashboard></app-dashboard> -->
 
-<!-- <app-login-page></app-login-page> -->
+<div class="d-flex">
+    <div style="width: 22%;">
+        <app-sidenav></app-sidenav>
+    </div>
+    <div style="width: 87%;">
+        <router-outlet></router-outlet>
+    </div>
+</div>
