--- a/src/app/components/patient/patient.component.scss
+++ b/src/app/components/patient/patient.component.scss
@@ -10,11 +10,11 @@ mat-toolbar {
     padding: 16px;
 
     mat-card {
-        margin-bottom: 16px;
+        margin-bottom: 10px;
         border-radius: 24px;
         display: flex;
         align-items: center;
-        padding: 10%;
+        padding: 3%;
         
         
 
@@ -37,8 +37,9 @@ mat-toolbar {
         }
 
         p {
-            font-size: 12px;
-            padding-top: 3px;
+            font-size: 15px;
+            padding-top: 5px;
+            font-family: 'Times New Roman', Times, serif;
         }
     }
 }
@@ -46,3 +47,6 @@ mat-toolbar {
 table {
     width: 100%;
 }
+
+
+
