View More Button

--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -33,3 +33,13 @@
     bottom: 29px;
     cursor: pointer;
 }
+
+.view-more:hover{
+    background-color: white;
+}
+
+.card-head{
+    height: 85px;
+    background-color: white;
+    padding: 20px;
+}
