--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -9,8 +9,8 @@
             <div #myPieChart style="width: 46%; height: 320px; background: white; border-radius: 24px;"></div>
 
 
-            <div class="chart-container" style="background-color: white; border-radius: 24px; padding: 10px;width: 55%;">
-                <canvas  id="MyChart" style=" height: 400px !important;">{{ chart }}</canvas>
+            <div class="chart-container" style="background-color: white; border-radius: 24px; padding: 10px;width: 51%;">
+                <canvas  id="MyChart" >{{ chart }}</canvas>
             </div>
             <!-- <div style="background: white; margin-bottom: 20px; border-radius: 24px ; margin-left: 20px; width: 30%; height: 322px;">
                 <h3 style="margin-top: 10px; padding-left: 10px; font-weight: 500;">List of Common Conditions :</h3>
@@ -41,27 +41,33 @@
             </div>
         </div>
 
-        <div class="table table-striped" style="margin-top: 30px; background: white; padding: 5px 15px; border-radius: 24px;">
+        <div class="table table-striped" style="margin-top: 30px; background: white; padding: 5px 15px; border-radius: 24px; margin-bottom: 5px;">
             <p-table [value]="topTenPatientData" [tableStyle]="{'max-width': '60rem'}">
                 <ng-template pTemplate="header">
-                    <tr style="height: 60px;">
-                        <th pSortableColumn="code" style="width:20%">Subject Id <p-sortIcon field="code"></p-sortIcon></th>
-                        <th pSortableColumn="name" style="width:20%">Hadm Id <p-sortIcon field="name"></p-sortIcon></th>
-                        <th pSortableColumn="category" style="width:20%">Risk Group <p-sortIcon field="category"></p-sortIcon></th>
-                        <th pSortableColumn="quantity" style="width:20%">Age <p-sortIcon field="quantity"></p-sortIcon></th>
-                        <th pSortableColumn="price" style="width:20%">Gender <p-sortIcon field="price"></p-sortIcon></th>
+                    <div class="card-head">
+                        <h1 class="card-header-title" style="font-weight: 500;color: #666666;">Patients</h1>
+                    </div>
+                    <tr style="height: 60px; border-top: 1px solid #e5e5e5;background-color: #F8FAFD; color: #82b0d9;">
+                        <th pSortableColumn="code" style="width:20% ; font-weight: 500;">Subject Id <p-sortIcon field="code"></p-sortIcon></th>
+                        <th pSortableColumn="name" style="width:20%;font-weight: 500;">Hadm Id <p-sortIcon field="name"></p-sortIcon></th>
+                        <th pSortableColumn="quantity" style="width:20%;font-weight: 500;">Age <p-sortIcon field="quantity"></p-sortIcon></th>
+                        <th pSortableColumn="price" style="width:20%;font-weight: 500;">Gender <p-sortIcon field="price"></p-sortIcon></th>
+                        <th pSortableColumn="category" style="width:20% ;font-weight: 500;">Risk Group <p-sortIcon field="category"></p-sortIcon></th>
                     </tr>
                 </ng-template>
                 <ng-template pTemplate="body" let-patient>
-                    <tr style="border-top: 1px solid; height: 60px;" >
-                        <td>{{patient.SUBJECT_ID}}</td>
+                    <tr style="border-top: 1px solid #e5e5e5;; height: 60px;" >
+                        <td style="color: grey;"># {{patient.SUBJECT_ID}}</td>
                         <td>{{patient.HADM_ID}}</td>
-                        <td>{{patient.Riskgroup}}</td>
                         <td>{{patient.AGE}}</td>
                         <td>{{patient.GENDER}}</td>
+                        <td style="color: red;">{{patient.Riskgroup}}</td>
                     </tr>
                 </ng-template>
             </p-table>
+        </div>
+        <div class="view-more" style="height: 40px; border-radius: 19px;display: flex; justify-content: center; cursor: pointer;" (click)="patientList()">
+            <h4 style="color: #5e9eed;; padding-top: 2px;">View More  <mat-icon style="padding-top: 5px;">keyboard_arrow_down</mat-icon> </h4>
         </div>
 
     </div>
