--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <!-- <app-sidenav></app-sidenav>
 <router-outlet></router-outlet> -->
 <!-- <app-dashboard></app-dashboard> -->
-
+<!-- 
 <div class="d-flex">
     <div style="width: 22%;">
         <app-sidenav></app-sidenav>
@@ -9,4 +9,5 @@
     <div style="width: 87%;">
         <router-outlet></router-outlet>
     </div>
-</div>
+</div> -->
+<app-login-page></app-login-page>
