--- a/src/app/components/single-patient-details/single-patient-details.component.html
+++ b/src/app/components/single-patient-details/single-patient-details.component.html
@@ -1,62 +1,147 @@
-
 <!-- <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css" />
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
 <script src="//code.jquery.com/jquery-1.11.1.min.js"></script> -->
 
-
-
 <div class="container-bx">
-
   <!-- Gauge Chart Call ------------------- -->
-      <div class="mid-section" style="width:60%;">
-        <div #gaugeChart
-        style="border-radius: 24px; width:80% ; margin-left: 20px ;height:48%; background-color: white;">
-        </div>
-      </div>
+  <div class="mid-section" style="width: 60%">
+    <div
+      #gaugeChart
+      style="
+        border-radius: 24px;
+        width: 80%;
+        margin-left: 20px;
+        height: 48%;
+        background-color: white;
+      "
+    ></div>
+  </div>
   <!-- Gauge Chart Call ------------------- -->
-
-
-  <div class="patient-data-section" style="background-color: white; width: 40%;border-radius: 24px; margin-right: 20px;">
-    <div style="padding-left: 30px; padding-top: 23px;">
+  <div
+    class="patient-data-section"
+    style="
+      background-color: white;
+      width: 40%;
+      border-radius: 24px;
+      margin-right: 20px;
+    "
+  >
+    <div style="padding-left: 30px; padding-top: 23px">
       <h2>Patient Details</h2>
     </div>
-    <div style="padding-left: 30px; color: white;">
+    <div style="padding-left: 30px; color: white">
+      <div
+        style="
+          width: 80%;
+          background-color: Purple;
+          border-radius: 28px;
+          padding: 10px 0px;
+          display: flex;
+          align-items: center;
+          flex-direction: column;
+          margin-bottom: 10px;
+        "
+      >
+        <span style="font-size: 12px">Patient Id :</span>
+        <span style="font-size: 16px">lala lala lala laaa</span>
+      </div>
+      <div
+        style="
+          width: 80%;
+          background-color: #f96167;
+          border-radius: 28px;
+          padding: 10px 0px;
+          display: flex;
+          align-items: center;
+          flex-direction: column;
+          margin-bottom: 10px;
+        "
+      >
+        <span style="font-size: 12px">HADM Id :</span>
+        <span style="font-size: 16px">lala lala lala laaa</span>
+      </div>
+      <div
+        style="
+          width: 80%;
+          background-color: blueviolet;
+          border-radius: 28px;
+          padding: 10px 0px;
+          display: flex;
+          align-items: center;
+          flex-direction: column;
+          margin-bottom: 10px;
+        "
+      >
+        <span style="font-size: 12px">Age :</span>
+        <span style="font-size: 16px">lala lala lala laaa</span>
+      </div>
+      <div
+        style="
+          width: 80%;
+          border-radius: 28px;
+          background-color: cadetblue;
+          padding: 10px 0px;
+          display: flex;
+          align-items: center;
+          flex-direction: column;
+          margin-bottom: 10px;
+        "
+      >
+        <span style="font-size: 12px">Gender :</span>
+        <span style="font-size: 16px">lala lala lala laaa</span>
+      </div>
+      <div
+        style="
+          width: 80%;
+          background-color: brown;
+          border-radius: 28px;
+          padding: 10px 0px;
+          display: flex;
+          align-items: center;
+          flex-direction: column;
+          margin-bottom: 10px;
+        "
+      >
+        <span style="font-size: 12px">Admission Date :</span>
+        <span style="font-size: 16px">lala lala lala laaa</span>
+      </div>
+      <div
+        style="
+          width: 80%;
+          background-color: chocolate;
+          border-radius: 28px;
+          padding: 10px 0px;
+          display: flex;
+          align-items: center;
+          flex-direction: column;
+          margin-bottom: 10px;
+        "
+      >
+        <span style="font-size: 12px">Insurance Provider :</span>
+        <span style="font-size: 16px">lala lala lala laaa</span>
+      </div>
+      <div
+        style="
+          width: 80%;
+          background-color: crimson;
+          padding: 10px 0px;
+          border-radius: 28px;
+          display: flex;
+          align-items: center;
+          flex-direction: column;
+          margin-bottom: 10px;
+        "
+      >
+        <span style="font-size: 12px">Risk Group :</span>
+        <span style="font-size: 16px">lala lala lala laaa</span>
+      </div>
 
-      <div style="width: 80%; background-color:#F96167;padding:10px 0px ; display: flex; align-items: center;flex-direction: column; margin-bottom: 10px;" >
-        <span style="font-size: 12px;">Patient Id :</span>
-        <span style="font-size: 16px;">lala lala lala laaa</span>
-      </div>
-      <div style="width: 80%; background-color:#F96167;padding:10px 0px ; display: flex; align-items: center;flex-direction: column; margin-bottom: 10px;" >
-        <span style="font-size: 12px;">HADM Id :</span>
-        <span style="font-size: 16px;">lala lala lala laaa</span>
-      </div><div style="width: 80%; background-color:#F96167;padding:10px 0px ; display: flex; align-items: center;flex-direction: column; margin-bottom: 10px;" >
-        <span style="font-size: 12px;">Age :</span>
-        <span style="font-size: 16px;">lala lala lala laaa</span>
-      </div><div style="width: 80%; background-color:#F96167;padding:10px 0px ; display: flex; align-items: center;flex-direction: column; margin-bottom: 10px;" >
-        <span style="font-size: 12px;">Gender :</span>
-        <span style="font-size: 16px;">lala lala lala laaa</span>
-      </div><div style="width: 80%; background-color:#F96167;padding:10px 0px ; display: flex; align-items: center;flex-direction: column; margin-bottom: 10px;" >
-        <span style="font-size: 12px;">Admission Date :</span>
-        <span style="font-size: 16px;">lala lala lala laaa</span>
-      </div><div style="width: 80%; background-color:#F96167;padding:10px 0px ; display: flex; align-items: center;flex-direction: column; margin-bottom: 10px;" >
-        <span style="font-size: 12px;">Insurance Provider :</span>
-        <span style="font-size: 16px;">lala lala lala laaa</span>
-      </div><div style="width: 80%; background-color:#F96167;padding:10px 0px ; display: flex; align-items: center;flex-direction: column; margin-bottom: 10px;" >
-        <span style="font-size: 12px;">Risk Group :</span>
-        <span style="font-size: 16px;">lala lala lala laaa</span>
-      </div>
-      
       <h4></h4>
       <h4></h4>
       <h4></h4>
       <h4></h4>
       <h4></h4>
-      <h4></h4> 
-    </div>  
-    
-    
+      <h4></h4>
+    </div>
   </div>
-    
-  
-
 </div>
