Made patient table scrollable

--- a/src/app/components/patient/patient.component.html
+++ b/src/app/components/patient/patient.component.html
@@ -11,9 +11,11 @@
             <div fxLayout="row wrap" fxLayoutGap="16px grid" *ngIf="admissionTypeCount">
                 <div [fxFlex]="(100/gridColumns) + '%'" fxFlex.xs="100%" fxFlex.sm="33%">
                     <mat-card class="mat-elevation-z8 emergency">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="35" height="30" fill="currentColor" class="bi bi-heartbreak-fill" viewBox="0 0 16 16">
-                            <path d="M8.931.586 7 3l1.5 4-2 3L8 15C22.534 5.396 13.757-2.21 8.931.586ZM7.358.77 5.5 3 7 7l-1.5 3 1.815 4.537C-6.533 4.96 2.685-2.467 7.358.77Z"/>
-                          </svg>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="35" height="30" fill="currentColor"
+                            class="bi bi-heartbreak-fill" viewBox="0 0 16 16">
+                            <path
+                                d="M8.931.586 7 3l1.5 4-2 3L8 15C22.534 5.396 13.757-2.21 8.931.586ZM7.358.77 5.5 3 7 7l-1.5 3 1.815 4.537C-6.533 4.96 2.685-2.467 7.358.77Z" />
+                        </svg>
                         <mat-card-header>
                             <mat-card-title>{{admissionTypeCount[0].EMERGENCY}}</mat-card-title>
                         </mat-card-header>
@@ -26,9 +28,11 @@
                 </div>
                 <div [fxFlex]="(100/gridColumns) + '%'" fxFlex.xs="100%">
                     <mat-card class="mat-elevation-z8 elective">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="35" height="30" fill="currentColor" class="bi bi-calendar-heart" viewBox="0 0 16 16">
-                            <path fill-rule="evenodd" d="M4 .5a.5.5 0 0 0-1 0V1H2a2 2 0 0 0-2 2v11a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V3a2 2 0 0 0-2-2h-1V.5a.5.5 0 0 0-1 0V1H4V.5ZM1 14V4h14v10a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1Zm7-6.507c1.664-1.711 5.825 1.283 0 5.132-5.825-3.85-1.664-6.843 0-5.132Z"/>
-                          </svg>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="35" height="30" fill="currentColor"
+                            class="bi bi-calendar-heart" viewBox="0 0 16 16">
+                            <path fill-rule="evenodd"
+                                d="M4 .5a.5.5 0 0 0-1 0V1H2a2 2 0 0 0-2 2v11a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V3a2 2 0 0 0-2-2h-1V.5a.5.5 0 0 0-1 0V1H4V.5ZM1 14V4h14v10a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1Zm7-6.507c1.664-1.711 5.825 1.283 0 5.132-5.825-3.85-1.664-6.843 0-5.132Z" />
+                        </svg>
                         <mat-card-header>
                             <mat-card-title>{{admissionTypeCount[0].ELECTIVE}}</mat-card-title>
                         </mat-card-header>
@@ -41,12 +45,15 @@
                 </div>
                 <div [fxFlex]="(100/gridColumns) + '%'" fxFlex.xs="100%" fxFlex.sm="33%">
                     <mat-card class="mat-elevation-z8 urgent">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="35" height="30" fill="currentColor" class="bi bi-heart-pulse" viewBox="0 0 16 16">
-                            <path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053.918 3.995.78 5.323 1.508 7H.43c-2.128-5.697 4.165-8.83 7.394-5.857.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17c3.23-2.974 9.522.159 7.394 5.856h-1.078c.728-1.677.59-3.005.108-3.947C13.486.878 10.4.28 8.717 2.01L8 2.748ZM2.212 10h1.315C4.593 11.183 6.05 12.458 8 13.795c1.949-1.337 3.407-2.612 4.473-3.795h1.315c-1.265 1.566-3.14 3.25-5.788 5-2.648-1.75-4.523-3.434-5.788-5Z"/>
-                            <path d="M10.464 3.314a.5.5 0 0 0-.945.049L7.921 8.956 6.464 5.314a.5.5 0 0 0-.88-.091L3.732 8H.5a.5.5 0 0 0 0 1H4a.5.5 0 0 0 .416-.223l1.473-2.209 1.647 4.118a.5.5 0 0 0 .945-.049l1.598-5.593 1.457 3.642A.5.5 0 0 0 12 9h3.5a.5.5 0 0 0 0-1h-3.162l-1.874-4.686Z"/>
-                          </svg>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="35" height="30" fill="currentColor"
+                            class="bi bi-heart-pulse" viewBox="0 0 16 16">
+                            <path
+                                d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053.918 3.995.78 5.323 1.508 7H.43c-2.128-5.697 4.165-8.83 7.394-5.857.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17c3.23-2.974 9.522.159 7.394 5.856h-1.078c.728-1.677.59-3.005.108-3.947C13.486.878 10.4.28 8.717 2.01L8 2.748ZM2.212 10h1.315C4.593 11.183 6.05 12.458 8 13.795c1.949-1.337 3.407-2.612 4.473-3.795h1.315c-1.265 1.566-3.14 3.25-5.788 5-2.648-1.75-4.523-3.434-5.788-5Z" />
+                            <path
+                                d="M10.464 3.314a.5.5 0 0 0-.945.049L7.921 8.956 6.464 5.314a.5.5 0 0 0-.88-.091L3.732 8H.5a.5.5 0 0 0 0 1H4a.5.5 0 0 0 .416-.223l1.473-2.209 1.647 4.118a.5.5 0 0 0 .945-.049l1.598-5.593 1.457 3.642A.5.5 0 0 0 12 9h3.5a.5.5 0 0 0 0-1h-3.162l-1.874-4.686Z" />
+                        </svg>
                         <mat-card-header class="urgent">
-                            
+
                             <mat-card-title>{{admissionTypeCount[0].URGENT}}</mat-card-title>
                         </mat-card-header>
                         <mat-card-content>
@@ -62,17 +69,17 @@
         <div style="padding: 10px ;">
             <h2>Patient Information</h2>
         </div>
-        <!-- <mat-form-field >
-        <mat-label>Filter</mat-label>
-        <input matInput (keyup)="applyFilter($event)" placeholder="Search columns" #input>
-    </mat-form-field> -->
-        <div class="mat-elevation-z8">
+        <mat-form-field>
+            <mat-label>Search</mat-label>
+            <input matInput (keyup)="applyFilter($event)" placeholder="Search" #input>
+        </mat-form-field>
+        <div class="sroll-bar mat-elevation-z8">
             <table mat-table [dataSource]="dataSource" matSort>
 
                 <!-- Position Column -->
-                
+
                 <ng-container matColumnDef="SUBJECT_ID">
-                    
+
                     <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by number">
                         SUBJECT_ID
                     </th>
@@ -117,7 +124,7 @@
                     </td>
                 </ng-container>
 
-                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                <tr mat-header-row *matHeaderRowDef="displayedColumns;sticky: true"></tr>
                 <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
             </table>
             <mat-paginator [pageSizeOptions]="[25,50,75,100]" showFirstLastButtons>
