Some Patients Table Changes

--- a/src/app/components/patient/patient.component.scss
+++ b/src/app/components/patient/patient.component.scss
@@ -57,4 +57,21 @@ mat-form-field {
     overflow-y: auto;
 }
 
-
+.mat-mdc-header-row{
+    background: #F8FAFD;
+}
+th{
+    color: #82b0d9;
+}
+.riskgroup1{
+    color: lightgreen;
+}
+.riskgroup2{
+    color: yellow;
+}
+.riskgroup3{
+    color: orange;
+}
+.riskgroup4{
+    color: red;
+}
