--- a/src/app/components/patient/patient.component.html
+++ b/src/app/components/patient/patient.component.html
@@ -1,5 +1,4 @@
-<div style="display: flex;">
-    <div style="padding: 20px 50px;background-color: #f6f6f6; position: absolute; left:22% ; width: 70%;">
+    <div style="padding: 20px 50px;background-color: #f6f6f6; ">
         <mat-toolbar>
             <h2>Patients</h2>
             <button mat-button (click)="toggleGridColumns()" fxHide.lt-md>
@@ -78,12 +77,12 @@
 
                 <!-- Position Column -->
 
-                <ng-container matColumnDef="SUBJECT_ID">
+                <ng-container matColumnDef="SUBJECT_ID" class="header-cell">
 
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by number">
+                    <th class="header-cell" mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by number">
                         SUBJECT_ID
                     </th>
-                    <td mat-cell *matCellDef="let element"> {{element.SUBJECT_ID}} </td>
+                    <td mat-cell *matCellDef="let element" style="color: grey;"># {{element.SUBJECT_ID}} </td>
                 </ng-container>
 
                 <!-- Name Column -->
@@ -99,7 +98,14 @@
                     <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by weight">
                         RISK GROUP
                     </th>
-                    <td mat-cell *matCellDef="let element"> {{element.Riskgroup}} </td>
+                    <td mat-cell *matCellDef="let element" [ngClass]="{
+                        'riskgroup1': element.Riskgroup === 'Low',
+                        'riskgroup2': element.Riskgroup === 'Medium',
+                        'riskgroup3': element.Riskgroup === 'High',
+                        'riskgroup4': element.Riskgroup === 'Urgent'
+                    }">
+                        {{ element.Riskgroup }}
+                    </td>
                 </ng-container>
 
                 <!-- Symbol Column -->
@@ -132,4 +138,3 @@
             </mat-paginator>
         </div>
     </div>
-</div>
