yellow color chnaged to gold

--- a/src/app/components/patient/patient.component.scss
+++ b/src/app/components/patient/patient.component.scss
@@ -15,8 +15,8 @@ mat-toolbar {
         display: flex;
         align-items: center;
         padding: 3%;
-        
-        
+
+
 
         mat-card-header {
             mat-card-title {
@@ -67,7 +67,7 @@ th{
     color: lightgreen;
 }
 .riskgroup2{
-    color: yellow;
+    color: gold;
 }
 .riskgroup3{
     color: orange;
