--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,12 +2,15 @@
 <router-outlet></router-outlet> -->
 <!-- <app-dashboard></app-dashboard> -->
 
-<div class="d-flex">
+<!-- <div class="d-flex">
     <div style="width: 22%;">
         <app-sidenav></app-sidenav>
     </div>
-    <div style="width: 87%;">
+    <div style="width: 100%;">
         <router-outlet></router-outlet>
     </div>
-</div>
+</div> -->
+
+
+<app-dashy></app-dashy>
 <!-- <app-login-page></app-login-page> -->
