--- a/src/app/sidenav/sidenav.component.html
+++ b/src/app/sidenav/sidenav.component.html
@@ -1,4 +1,4 @@
-<div class="sidenav" style="width: 20%; height: 100vw; padding: 2px 11px;">
+<!-- <div class="sidenav" style="width: 20%; height: 100vw; padding: 2px 11px;">
     <section>
         <h3 style="margin-top: 20px; margin-left: 16px;color: orange;font-size: 19px;">Wellness Peers</h3>
 
@@ -23,4 +23,38 @@
         </div>
         
     </section>
-</div>
+</div> -->
+
+
+<div class="nav-all" style="display: flex;justify-content: space-between;box-shadow: 0px 4px 13px #dedcdc;">
+  
+    <div>
+        <!-- <img src="../assets/Wellness_peers.png" style="height: 50px;width: 50px;"> -->
+    </div>
+
+    <div id="down-nav">
+  
+        <li class="dropdown">
+            <span class="drop-text" type="button" >
+              Dashboard
+            </span>
+        </li>
+
+  
+        <li class="dropdown">
+            <span class="drop-text" type="button" >
+                Patients
+            </span>
+        </li>
+  
+  
+        <li class="dropdown">
+            <span class="drop-text" type="button" >
+                About Us
+            </span>
+        </li>
+  
+    <a class="btn btn-primary btn-transition">Logout</a>
+
+    </div>
+  </div>
