--- a/src/app/components/patient/patient.component.scss
+++ b/src/app/components/patient/patient.component.scss
@@ -17,12 +17,28 @@ mat-toolbar {
         padding: 3%;
 
 
+      
+
+
+
 
         mat-card-header {
             mat-card-title {
                 font-size: 35px;
             }
         }
+        .animate{
+        border-radius: 4px; background: #fff; box-shadow: 0 6px 10px rgba(0,0,0,.08), 0 0 6px rgba(0,0,0,.05); transition: .3s transform cubic-bezier(.155,1.105,.295,1.12),.3s box-shadow,.3s -webkit-transform cubic-bezier(.155,1.105,.295,1.12); padding: 14px 80px 18px 36px; cursor: pointer;
+        
+        transition: 0.3s ease-in-out;
+    }
+
+        .animate:hover { 
+            transform: scale(1.05); 
+            transition: 0.3s ease-in-out;
+            box-shadow: 0 10px 20px rgba(0,0,0,.12), 0 4px 8px rgba(0,0,0,.06);
+        background-color: black;
+         }
 
         &.emergency {
             color: red;
@@ -43,6 +59,11 @@ mat-toolbar {
         }
     }
 }
+@media(max-width: 990px){
+    .card{
+      margin: 20px;
+    }
+  } 
 
 table {
     width: 100%;
@@ -75,3 +96,35 @@ th{
 .riskgroup4{
     color: red;
 }
+
+
+
+// New Css
+
+.count-container {
+     display: flex;
+     justify-content: center;
+     align-items: center;
+     height: 100%;
+    }
+    
+    
+    
+    .count {
+    font-size: 1rem;
+    font-weight: bold;
+ animation: count-up 0.1s ease-out;
+    }
+    
+    
+    @keyframes count-up {
+     0% {
+     transform: scale(1);
+     }
+     50% {
+     transform: scale(1.5);
+     }
+     100% {
+    transform: scale(1);
+     }
+    }
