Dashboard UI has been changed

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,15 +2,15 @@
 <router-outlet></router-outlet> -->
 <!-- <app-dashboard></app-dashboard> -->
 
-<!-- <div class="d-flex">
-    <div style="width: 22%;">
+<div class="d-flex flex-column" style="background-color: #f6f6f6;">
+    <div>
         <app-sidenav></app-sidenav>
     </div>
-    <div style="width: 100%;">
+    <div>
         <router-outlet></router-outlet>
     </div>
-</div> -->
+</div>
 
 
-<app-dashy></app-dashy>
+<!-- <app-dashy></app-dashy> -->
 <!-- <app-login-page></app-login-page> -->
