--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,74 +1,98 @@
 <!-- <div style="display: flex;"> -->
-    <!-- <app-sidenav></app-sidenav> -->
+<!-- <app-sidenav></app-sidenav> -->
+<div class="main">
+  <div style="display: flex; flex-direction: column; gap: 10px; width: 40%">
+    <div
+      #myPieChart
+      style="width: 100%; height: 320px; background: white; border-radius: 24px"
+    ></div>
 
-    <div style="padding: 20px 50px;background-color: #f6f6f6;">
-        <h2>Dashboard</h2>
+    <!-- <div
+      class="chart-container"
+      style="
+        background-color: white;
+        border-radius: 24px;
+        padding: 10px;
+        width: 100%;
+      "
+    >
+      <canvas id="MyChart">{{ chart }}</canvas>
+    </div> -->
 
-        <div style="display: flex; justify-content: space-between;" >
-
-            <div #myPieChart style="width: 49%; height: 320px; background: white; border-radius: 24px;"></div>
-
-
-            <div class="chart-container" style="background-color: white; border-radius: 24px; padding: 10px;width: 51%;">
-                <canvas  id="MyChart" >{{ chart }}</canvas>
-            </div>
-            <!-- <div style="background: white; margin-bottom: 20px; border-radius: 24px ; margin-left: 20px; width: 30%; height: 322px;">
-                <h3 style="margin-top: 10px; padding-left: 10px; font-weight: 500;">List of Common Conditions :</h3>
-            </div> -->
-        </div>
-
-
-
-        <div style="margin-top: 12px;">
-            <div style="display: flex; justify-content: space-between;">
-                <div class="card-cont" style="width: 240px; height: 150px; background-color: white;border-radius: 25px;">
-                    <h4 style="padding-top: 14px; padding-left: 22px; font-weight: 600;">Patients</h4>
-                    <div class="icon-cont"><mat-icon class="icon-style"  style="position: relative;top: 3px; left: 4px;">perm_identity</mat-icon></div>
-                    <h2 style="padding-left: 22px;">5,000</h2>
-                </div>
-
-                <div class="card-cont" style="width: 240px; height: 150px; background-color: white;border-radius: 25px;">
-                    <h4 style="padding-top: 14px; padding-left: 22px; font-weight: 600;">Reports</h4>
-                    <div class="icon-cont"><mat-icon class="icon-style" style="position: relative;top: 3px; left: 4px;">description</mat-icon></div>
-                    <h2 style="padding-left: 22px;">5,000</h2>
-                </div>
-
-                <div class="card-cont" style="width: 240px; height: 150px; background-color: white;border-radius: 25px;">
-                    <h4 style="padding-top: 14px; padding-left: 22px; font-weight: 600;">Reports</h4>
-                    <div class="icon-cont"><mat-icon class="icon-style" style="position: relative;top: 3px; left: 4px;">description</mat-icon></div>
-                    <h2 style="padding-left: 22px;">5,000</h2>
-                </div>
-            </div>
-        </div>
-
-        <div class="table table-striped" style="margin-top: 30px; background: white; padding: 5px 15px; border-radius: 24px; margin-bottom: 5px;">
-            <p-table [value]="topTenPatientData" [tableStyle]="{'max-width': '60rem'}">
-                <ng-template pTemplate="header">
-                    <div class="card-head">
-                        <h1 class="card-header-title" style="font-weight: 500;color: #666666;">Patients</h1>
-                    </div>
-                    <tr style="height: 60px; border-top: 1px solid #e5e5e5;background-color: #F8FAFD; color: #82b0d9;">
-                        <th pSortableColumn="code" style="width:20% ; font-weight: 500;">Subject Id <p-sortIcon field="code"></p-sortIcon></th>
-                        <th pSortableColumn="name" style="width:20%;font-weight: 500;">Hadm Id <p-sortIcon field="name"></p-sortIcon></th>
-                        <th pSortableColumn="quantity" style="width:20%;font-weight: 500;">Age <p-sortIcon field="quantity"></p-sortIcon></th>
-                        <th pSortableColumn="price" style="width:20%;font-weight: 500;">Gender <p-sortIcon field="price"></p-sortIcon></th>
-                        <th pSortableColumn="category" style="width:20% ;font-weight: 500;">Risk Group <p-sortIcon field="category"></p-sortIcon></th>
-                    </tr>
-                </ng-template>
-                <ng-template pTemplate="body" let-patient>
-                    <tr style="border-top: 1px solid #e5e5e5;; height: 60px;" >
-                        <td style="color: grey;"># {{patient.SUBJECT_ID}}</td>
-                        <td>{{patient.HADM_ID}}</td>
-                        <td>{{patient.AGE}}</td>
-                        <td>{{patient.GENDER}}</td>
-                        <td style="color: red;">{{patient.Riskgroup}}</td>
-                    </tr>
-                </ng-template>
-            </p-table>
-        </div>
-        <div class="view-more" style="height: 40px; border-radius: 19px;display: flex; justify-content: center; cursor: pointer;" (click)="patientList()">
-            <h4 style="color: #5e9eed;; padding-top: 2px;">View More  <mat-icon style="padding-top: 5px;">keyboard_arrow_down</mat-icon> </h4>
-        </div>
-
+    <div class="chart-container">
+      <canvas id="MyBarChart">{{ chart }}</canvas>
     </div>
+    <!-- <div style="background: white; margin-bottom: 20px; border-radius: 24px ; margin-left: 20px; width: 30%; height: 322px;">
+            <h3 style="margin-top: 10px; padding-left: 10px; font-weight: 500;">List of Common Conditions :</h3>
+        </div> -->
+  </div>
+  <div style="width: 55%">
+    <div
+      class="table table-striped"
+      style="background: white; padding: 5px 15px; border-radius: 24px"
+    >
+      <p-table
+        [value]="topTenPatientData"
+        [tableStyle]="{ 'max-width': '100rem' }"
+      >
+        <ng-template pTemplate="header">
+          <div class="card-head">
+            <p class="card-header-title" style="font-weight: 500">
+              They Need Diagnosis
+            </p>
+          </div>
+          <tr
+            style="
+              height: 60px;
+              border-top: 1px solid #e5e5e5;
+              background-color: #f8fafd;
+              color: #82b0d9;
+            "
+          >
+            <th pSortableColumn="code" style="width: 20%; font-weight: 500">
+              Subject Id <p-sortIcon field="code"></p-sortIcon>
+            </th>
+            <th pSortableColumn="name" style="width: 20%; font-weight: 500">
+              Hadm Id <p-sortIcon field="name"></p-sortIcon>
+            </th>
+            <th pSortableColumn="quantity" style="width: 20%; font-weight: 500">
+              Age <p-sortIcon field="quantity"></p-sortIcon>
+            </th>
+            <th pSortableColumn="price" style="width: 20%; font-weight: 500">
+              Gender <p-sortIcon field="price"></p-sortIcon>
+            </th>
+            <th pSortableColumn="category" style="width: 20%; font-weight: 500">
+              Risk Group <p-sortIcon field="category"></p-sortIcon>
+            </th>
+          </tr>
+        </ng-template>
+        <ng-template pTemplate="body" let-patient>
+          <tr style="border-top: 1px solid #e5e5e5; height: 60px">
+            <td style="color: grey"># {{ patient.SUBJECT_ID }}</td>
+            <td>{{ patient.HADM_ID }}</td>
+            <td>{{ patient.AGE }}</td>
+            <td>{{ patient.GENDER }}</td>
+            <td style="color: red">{{ patient.Riskgroup }}</td>
+          </tr>
+        </ng-template>
+      </p-table>
+    </div>
+    <div
+      class="view-more"
+      style="
+        height: 40px;
+        border-radius: 19px;
+        display: flex;
+        justify-content: center;
+        cursor: pointer;
+      "
+      (click)="patientList()"
+    >
+      <h4 style="color: #5e9eed; padding-top: 2px">
+        View More
+        <mat-icon style="padding-top: 5px">keyboard_arrow_down</mat-icon>
+      </h4>
+    </div>
+  </div>
+</div>
 <!-- </div> -->
