Added fade effect on dashboard

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,6 +1,6 @@
 <!-- <div style="display: flex;"> -->
 <!-- <app-sidenav></app-sidenav> -->
-<div class="main">
+<div class="main box">
   <div style="display: flex; flex-direction: column; gap: 10px; width: 40%">
     <div
       #myPieChart
