--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -57,3 +57,19 @@
 }
 
 
+.box {
+
+    animation: fadeIn 1.5s ease-in-out forwards;
+    opacity: 0;
+}
+
+
+    
+@keyframes fadeIn {
+    from {
+     opacity: 0;
+     }
+     to {
+opacity: 1;
+     }
+    }
