--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,10 +1,27 @@
 <!-- <div style="display: flex;"> -->
 <!-- <app-sidenav></app-sidenav> -->
+<div class="bg-cont" style="background-image: url('../assets/bg1.png');">
+
+<div class="inside-cont">
+
+  <div class="row align-items-center">
+
+  <div class="col">
+
+  <span class="h2" style="color: white;">Dashboard</span>
+
+  </div>
+
+  </div>
+
+  </div>
+
+</div>
 <div class="main box">
-  <div style="display: flex; flex-direction: column; gap: 10px; width: 40%">
+  <div style="display: flex; flex-direction: column; gap: 20px; width: 40%; justify-content: center; padding: 10px;">
     <div
       #myPieChart
-      style="width: 100%; height: 320px; background: white; border-radius: 24px"
+      style="width: 100%; height: 320px; background: white; border-radius: 24px; box-shadow: 0 10px 20px rgba(0, 0, 0, .12), 0 4px 8px rgba(0, 0, 0, .06);"
     ></div>
 
     <!-- <div
@@ -19,7 +36,7 @@
       <canvas id="MyChart">{{ chart }}</canvas>
     </div> -->
 
-    <div class="chart-container" style="width: 100%; height: 320px; background: white; border-radius: 24px;">
+    <div class="chart-container" style="width: 100%; height: 320px; background: white; padding: 10px; border-radius: 24px;box-shadow: 0 10px 20px rgba(0, 0, 0, .12), 0 4px 8px rgba(0, 0, 0, .06);">
       <canvas id="MyBarChart">{{ chart }}</canvas>
     </div>
     <!-- <div style="background: white; margin-bottom: 20px; border-radius: 24px ; margin-left: 20px; width: 30%; height: 322px;">
