--- a/src/app/components/single-patient-details/single-patient-details.component.scss
+++ b/src/app/components/single-patient-details/single-patient-details.component.scss
@@ -1,4 +1,17 @@
+.box {
 
+    animation: fadeIn 1s ease-in-out forwards;
+    opacity: 0;
+}
+    
+@keyframes fadeIn {
+    from {
+     opacity: 0;
+     }
+     to {
+opacity: 1;
+     }
+    }
 .container-bx{
     // position: absolute;
     //overflow-x: hidden;
