--- a/src/app/components/single-patient-details/single-patient-details.component.html
+++ b/src/app/components/single-patient-details/single-patient-details.component.html
@@ -12,7 +12,7 @@
   </div>
 </div>
 
-<div class="container-bx" style="display: flex; justify-content: center;">
+<div class="container-bx box" style="display: flex; justify-content: center;">
   <div class="patient-data-section" style="background-color: white;
   width: 85%;
   margin-top: -6rem!important;
