--- a/src/app/sidenav/sidenav.component.html
+++ b/src/app/sidenav/sidenav.component.html
@@ -26,12 +26,25 @@
 </div> -->
 
 
-<div class="nav-all" style="display: flex;justify-content: space-between;box-shadow: 0px 4px 13px #dedcdc;">
+<div class="nav-all" style="display: flex;justify-content: space-between;box-shadow: 0px 4px 13px #dedcdc;background-color: white;">
 
-    <div class="logo">
+    <div style="display: flex;padding-left: 15px;    padding-top: 8px;
+    "class="logo">
       <!-- <span class="material-symbols-outlined">
         ecg_heart
       </span> -->
+      <img style="    width: 76px;
+      height: 67px;"src="../../assets/Logo_Dashboard.jpg"/>
+      <!-- <i class='fa fa-heartbeat' style='color: red'></i> -->
+      <div style="display: flex;
+      flex-direction: column;padding-top: 10px;">
+      <span style="    font-size: 15pt;
+      font-family: cursive;
+      color: blue;">WELLNESS </span>
+      <span style="color: blue;
+      font-size: 11pt;
+      font-family: cursive;">PEERS</span>
+    </div>
     </div>
 
     <div id="down-nav">
