Added routing and authentication

--- a/src/app/login-page/login-page.component.html
+++ b/src/app/login-page/login-page.component.html
@@ -3,7 +3,7 @@
   <div class="form-container sign-in-container">
     <form>
       <h4 style="color: black; font-family: cursive; font-size: x-large">
-        LOGIN PAGE
+        LOGIN
       </h4>
       <input
         #Email="ngModel"
