--- a/src/app/login-page/login-page.component.scss
+++ b/src/app/login-page/login-page.component.scss
@@ -112,7 +112,7 @@ form button {
   left: 0;
   width: 100%;
   height: 80%;
-  z-index: 1;
+  // z-index: 1;
 }
 .bg-bubbles li {
   position: absolute;
