--- a/src/app/components/single-patient-details/single-patient-details.component.html
+++ b/src/app/components/single-patient-details/single-patient-details.component.html
@@ -6,7 +6,7 @@
   <div class="inside-cont">
       <div class="row align-items-center">
           <div class="col">
-              <span class="h2" style="color: white;">Patient</span>
+              <span class="h2" style="color: white;">Patient Details</span>
           </div>
       </div>
   </div>
@@ -24,7 +24,7 @@
             <img src="https://cdn-icons-png.flaticon.com/512/3135/3135715.png" alt="" style="width: 20%;">
           </div>
           <div class="mt-1">
-            <h2>Mr. Anonymous</h2>
+            <h2>Mr./Mrs. Anonymous</h2>
           </div>
         </div>
         <div style="margin-left: 15px; margin-right: 15px;">
@@ -35,7 +35,7 @@
             <div class="d-flex flex-column" style="width:50%" >
               <div>
                 <div>
-                  <h3><b>SUBJECT ID:</b></h3>
+                  <h3><b>PATIENT ID:</b></h3>
                 </div>
                 <div>
                   <h3>{{patientData.subjectID}}</h3>
