--- a/src/app/components/patient/patient.component.html
+++ b/src/app/components/patient/patient.component.html
@@ -2,7 +2,7 @@
         <div class="inside-cont">
             <div class="row align-items-center">
                 <div class="col">
-                    <span class="h2" style="color: white;">All Patients</span>
+                    <span class="h2" style="color: white;">All Patient Details</span>
                 </div>
             </div>
         </div>
@@ -94,9 +94,9 @@
                     <ng-container matColumnDef="SUBJECT_ID" class="header-cell">
     
                         <th class="header-cell" mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by number">
-                            SUBJECT_ID
+                            PATIENT_ID
                         </th>
-                        <td mat-cell *matCellDef="let element" style="color: grey;"># {{element.SUBJECT_ID}} </td>
+                        <td mat-cell *matCellDef="let element" style="color: black;"><b>{{element.SUBJECT_ID}}</b> </td>
                     </ng-container>
     
                     <!-- Name Column -->
