--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -8,7 +8,7 @@
 
   <div class="col">
 
-  <span class="h2" style="color: white;">Dashboard</span>
+  <span class="h2" style="color: white; font-size: 14pt;">Dashboard</span>
 
   </div>
 
@@ -37,6 +37,8 @@
     </div> -->
 
     <div class="chart-container" style="width: 100%; height: 320px; background: white; padding: 10px; border-radius: 24px;box-shadow: 0 10px 20px rgba(0, 0, 0, .12), 0 4px 8px rgba(0, 0, 0, .06);">
+      <h2 style="color: black;    display: flex;
+      justify-content: center;font-family: inherit;"><b>Age Wise Risk-Score</b></h2>
       <canvas id="MyBarChart">{{ chart }}</canvas>
     </div>
     <!-- <div style="background: white; margin-bottom: 20px; border-radius: 24px ; margin-left: 20px; width: 30%; height: 322px;">
@@ -66,26 +68,26 @@
               color: #82b0d9;
             "
           >
-            <th pSortableColumn="code" style="width: 20%; font-weight: 500">
-              Subject Id <p-sortIcon field="code"></p-sortIcon>
+            <th pSortableColumn="SUBJECT_ID" style="width: 20%; font-weight: 500">
+              PATIENT_ID<p-sortIcon field="SUBJECT_ID"></p-sortIcon>
             </th>
-            <th pSortableColumn="name" style="width: 20%; font-weight: 500">
-              Hadm Id <p-sortIcon field="name"></p-sortIcon>
+            <th pSortableColumn="HADM_ID" style="width: 20%; font-weight: 500">
+              HADM_ID <p-sortIcon field="HADM_ID"></p-sortIcon>
             </th>
-            <th pSortableColumn="quantity" style="width: 20%; font-weight: 500">
-              Age <p-sortIcon field="quantity"></p-sortIcon>
+            <th pSortableColumn="AGE" style="width: 20%; font-weight: 500">
+              AGE <p-sortIcon field="AGE"></p-sortIcon>
             </th>
-            <th pSortableColumn="price" style="width: 20%; font-weight: 500">
-              Gender <p-sortIcon field="price"></p-sortIcon>
+            <th pSortableColumn="GENDER" style="width: 20%; font-weight: 500">
+              GENDER <p-sortIcon field="GENDER"></p-sortIcon>
             </th>
-            <th pSortableColumn="category" style="width: 20%; font-weight: 500">
-              Risk Group <p-sortIcon field="category"></p-sortIcon>
+            <th pSortableColumn="Riskgroup" style="width: 20%; font-weight: 500">
+              RISK GROUP <p-sortIcon field="Riskgroup"></p-sortIcon>
             </th>
           </tr>
         </ng-template>
         <ng-template pTemplate="body" let-patient>
           <tr style="border-top: 1px solid #e5e5e5; height: 60px">
-            <td style="color: grey"># {{ patient.SUBJECT_ID }}</td>
+            <td style="color: black"> <B>{{ patient.SUBJECT_ID }}</B></td>
             <td>{{ patient.HADM_ID }}</td>
             <td>{{ patient.AGE }}</td>
             <td>{{ patient.GENDER }}</td>
