final changes added

--- a/src/app/login-page/login-page.component.html
+++ b/src/app/login-page/login-page.component.html
@@ -27,7 +27,7 @@
       </div>
       <input
         #Password="ngModel"
-        type="text"
+        type="password"
         [(ngModel)]="password"
         placeholder="Password"
         [ngModelOptions]="{ standalone: true }"
