--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -80,6 +80,9 @@
             <th pSortableColumn="GENDER" style="width: 20%; font-weight: 500">
               GENDER <p-sortIcon field="GENDER"></p-sortIcon>
             </th>
+            <th pSortableColumn="Expectedstay" style="width: 20%; font-weight: 500">
+              EXPECTED STAY <p-sortIcon field="Expectedstay"></p-sortIcon>
+            </th>
             <th pSortableColumn="Riskgroup" style="width: 20%; font-weight: 500">
               RISK GROUP <p-sortIcon field="Riskgroup"></p-sortIcon>
             </th>
@@ -91,6 +94,7 @@
             <td>{{ patient.HADM_ID }}</td>
             <td>{{ patient.AGE }}</td>
             <td>{{ patient.GENDER }}</td>
+            <td>{{ patient.expectedStay }} Days</td>
             <td style="color: red">{{ patient.Riskgroup }}</td>
           </tr>
         </ng-template>
